--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
 	},
 	"scripts": {
 		"kill-n8n": "pm2 delete n8n-dev",
-		"build": "npx rimraf dist && tsc -p tsconfig.json && gulp build:icons",
-		"build:windows": "npx rimraf dist && tsc -p tsconfig.json && gulp build:icons",
+		"build": "rimraf dist && tsc -p tsconfig.json && gulp build:icons",
+		"build:windows": "rimraf dist && tsc -p tsconfig.json && gulp build:icons",
 		"dev": "tsc --watch",
 		"dev:windows": "node scripts/setup-dev-windows.js && tsc --watch",
 		"dev:n8n": "node scripts/watch-n8n.js",
@@ -209,6 +209,7 @@
 		"gulp": "^5.0.0",
 		"n8n-workflow": "*",
 		"prettier": "^2.7.1",
+		"rimraf": "^3.0.2",
 		"typescript": "~4.8.4",
 		"jest": "^29.7.0",
 		"ts-jest": "^29.1.0",
