feat: add Cloudflare AI Search node supporting RAG generation and file search operations.
> [!IMPORTANT] > **AI Search / AutoRAG SDK Limitation (as of 2026-01-21)**
>
> The `cloudflare` npm package **v5.2.0** (current stable) does **NOT** include `autorag` or `aisearch` resources.
> The Cloudflare documentation at `developers.cloudflare.com/api/node/resources/autorag/` documents **v6.0.0-beta.1**
> which was released on 2026-01-20 and includes these resources.
>
> **Until v6 is stable**, the `CloudflareAISearch` node uses **direct API calls** via `cloudflareApiRequest`
> instead of SDK methods. When v6 is released as stable, we will consider refactoring to use native SDK methods.

--- a/package.json
+++ b/package.json
@@ -213,7 +213,8 @@
 			"dist/nodes/CloudflareWorkersForPlatforms/CloudflareWorkersForPlatforms.node.js",
 			"dist/nodes/CloudflareSecurityCenter/CloudflareSecurityCenter.node.js",
 			"dist/nodes/CloudflareInvites/CloudflareInvites.node.js",
-			"dist/nodes/CloudflareOrganizations/CloudflareOrganizations.node.js"
+			"dist/nodes/CloudflareOrganizations/CloudflareOrganizations.node.js",
+			"dist/nodes/CloudflareAISearch/CloudflareAiSearch.node.js"
 		]
 	},
 	"devDependencies": {
